<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MisLugares</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mis_lugares">Mis Lugares</string>
    <string name="nuevo_lugar">Nuevo Lugar</string>
    <string name="mostrar_lugares">Mostrar Lugares</string>
    <string name="preferencias">Preferencias</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">SALIR</string>
    <string name="title_activity_edicion_lugar">Mis Lugares</string>
    <string name="nombre">Nombre:</string>
    <string name="hint_nombre">algo que identifique el lugar</string>
    <string name="tipo">Tipo:</string>
    <string name="direccion">Dirección:</string>
    <string name="hint_direccion">dirección del lugar</string>
    <string name="telefono">Teléfono:</string>
    <string name="hint_telefono">teléfono de contactor</string>
    <string name="web">Web:</string>
    <string name="hint_web">página web</string>
    <string name="comentario">Comentario:</string>
    <string name="hint_comentario">introduce tus notas</string>
    <string name="guardar">GUARDAR</string>
    <string name="title_activity_vista_lugar">VistaLugar</string>
    <string name="nombre_lugar">Nombre del lugar</string>
    <string name="direccion_lugar">Dirección del lugar</string>
    <string name="logo_tipo">logo del tipo</string>
    <string name="tipo_lugar">tipo de lugar</string>
    <string name="logo_direccion">logo de la dirección</string>
    <string name="fotografia">fotografía</string>
    <string name="logo_camara">logo cámara</string>
    <string name="logo_galeria">logo galería</string>
    <string name="cancelar">CANCELAR</string>
    <string name="compartir">Compartir</string>
    <string name="como_llegar">Cómo Llegar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_lista_lugares">MisLugares</string>
    <string name="no_lugares">No hay Lugares</string>
</resources>
