<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_gravity="center" 
        android:textSize="30sp"  
        android:textStyle="bold"  
        android:text="@string/mis_lugares" />
    
    <Button
        android:id="@+id/bt_nuevo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_lugar" />
    
    <Button
        android:id="@+id/bt_mostrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_lugares" />

	<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferencias" />
        
	<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de" />
        
	<Button
	    android:id="@+id/bt_salir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:text="@string/salir" />    
</LinearLayout>
