<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EdicionLugar" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:orientation="vertical">
        
        <TextView            
            android:id="@+id/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/hint_nombre" >
            <requestFocus/>
        </EditText>
            
        <TextView            
            android:id="@+id/txt_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
         
        <Spinner            
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
                               
		<TextView
            android:id="@+id/txt_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium" />
         
        <EditText            
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            android:inputType="textPostalAddress" />
        
        <TextView            
            android:id="@+id/txt_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText            
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/hint_telefono"
            android:inputType="phone" />
        
        <TextView
            android:id="@+id/txt_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/web"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/hint_web"
            android:inputType="textUri" />
        
        <TextView
            android:id="@+id/txt_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comentario"
            android:inputType="textMultiLine" />  
            
        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" /> 
    </LinearLayout>
</ScrollView>
