<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/accion_compartir"
        android:title="@string/compartir"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accion_llegar"
        android:title="@string/como_llegar"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accion_editar"
        android:title="@string/editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accion_borrar"
        android:title="@string/borrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"/>
</menu>
